lab2/Src/k8s-manifests/app-infrastructure.yaml
# 2. Описание Service B - Версия v1
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-b-v1
  namespace: lab2
  labels:
    app: service-b
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-b
      version: v1
  template:
    metadata:
      labels:
        app: service-b
        version: v1
    spec:
      containers:
      - name: app
        image: service-b:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8000
          name: http-api
        resources: 
          requests:
            cpu: "100m"
            memory: "64Mi"
          limits:
            cpu: "250m"
            memory: "128Mi"
        livenessProbe: # жив ли процесс
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 5
        readinessProbe: # готов ли принимать трафик
          httpGet:
            path: /health
            port: 8000
---
# 3. Описание Service B - Версия v2
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-b-v2
  namespace: lab2
  labels:
    app: service-b
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-b
      version: v2
  template:
    metadata:
      labels:
        app: service-b
        version: v2
    spec:
      containers:
      - name: app
        image: service-b:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8000
          name: http-api
---
# 4. Общий абстрактный адрес для Service B
apiVersion: v1
kind: Service
metadata:
  name: service-b
  namespace: lab2
spec:
  selector:
    app: service-b # Объединяет и v1, и v2 под одним DNS-именем
  ports:
  - name: http
    port: 80
    targetPort: 8000
---
# 5. Описание Service A
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-a
  namespace: lab2
  labels:
    app: service-a
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-a
  template:
    metadata:
      labels:
        app: service-a
    spec:
      containers:
      - name: app
        image: service-a:latest 
        imagePullPolicy: Never
        ports:
        - containerPort: 8000
          name: http-api
---
# 6. Сервис для доступа к А
apiVersion: v1
kind: Service
metadata:
  name: service-a
  namespace: lab2
spec:
  selector:
    app: service-a
  ports:
  - name: http
    port: 8000
    targetPort: 8000
